--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "src/*": ["./src/*"],
-      "@/public/*": ["./public/*"]
+      "src/*": ["./src/*"]
+      // "@/public/*": ["./public/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
