--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@first-apps/mf-components",
   "version": "1.0.0",
-  "private": true,
+  "main": "build/bundle.js",
   "repository": {
     "url": "https://github.com/first-apps/mf-components.git"
   },
@@ -9,6 +9,14 @@
     "name": "dikshit-n",
     "email": "dikshitkumarn@gmail.com"
   },
+  "keywords": [
+    "react",
+    "components",
+    "firstApps",
+    "mf",
+    "module federation",
+    "micro frontend"
+  ],
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -34,6 +42,8 @@
     "dev": "webpack serve --open --port 8080",
     "start": "webpack serve --open --port 8080",
     "build": "rm -rf build && webpack --config webpack.config.ts",
+    "publish": "npm publish --access public",
+    "link:local": "npm link",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
