--- a/.babelrc.json
+++ b/.babelrc.json
@@ -6,7 +6,7 @@
         "modules": "auto"
       }
     ],
-    "@babel/preset-react",
-    "@babel/preset-typescript"
+    "@babel/preset-typescript",
+    "@babel/preset-react"
   ]
 }
