--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "@first-apps/mf-components",
-  "version": "1.0.0",
-  "main": "build/bundle.js",
+  "version": "1.1.0",
+  "description": "Components library for @first-apps built on React JS",
+  "main": "dist/cjs/index.js",
+  "module": "dist/cjs/index.js",
+  "types": "dist/index.d.ts",
   "repository": {
     "url": "https://github.com/first-apps/mf-components.git"
   },
@@ -17,6 +20,16 @@
     "module federation",
     "micro frontend"
   ],
+  "scripts": {
+    "dev": "react-scripts start --port 8080",
+    "start": "react-scripts start --port 8080",
+    "build": "rm -rf build && react-scripts build",
+    "build:lib": "rm -rf dist && rollup -c rollup.config.ts --bundleConfigAsCjs",
+    "publish": "npm publish --access public --tag latest",
+    "link:local": "npm link",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -37,15 +50,6 @@
     "workbox-routing": "^6.6.0",
     "workbox-strategies": "^6.6.0",
     "workbox-streams": "^6.6.0"
-  },
-  "scripts": {
-    "dev": "webpack serve --open --port 8080",
-    "start": "webpack serve --open --port 8080",
-    "build": "rm -rf build && webpack --config webpack.config.ts",
-    "publish": "npm publish --access public",
-    "link:local": "npm link",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -70,28 +74,24 @@
     "@babel/preset-env": "^7.25.4",
     "@babel/preset-react": "^7.24.7",
     "@babel/preset-typescript": "^7.25.7",
-    "@fullhuman/postcss-purgecss": "^6.0.0",
-    "@module-federation/enhanced": "^0.6.6",
+    "@rollup/plugin-commonjs": "^28.0.1",
+    "@rollup/plugin-node-resolve": "^15.3.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.1",
     "@types/jest": "^27.5.2",
     "@types/node": "^17.0.45",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.20",
-    "babel-loader": "^9.2.1",
-    "clean-webpack-plugin": "^4.0.0",
-    "css-loader": "^7.1.2",
+    "env-cmd": "^10.1.0",
     "glob-all": "^3.3.1",
-    "html-webpack-plugin": "^5.6.0",
-    "mini-css-extract-plugin": "^2.9.1",
-    "postcss-loader": "^8.1.1",
-    "purgecss-webpack-plugin": "^6.0.0",
-    "style-loader": "^4.0.0",
+    "react-jsx": "^1.0.0",
+    "rollup": "^4.24.0",
+    "rollup-plugin-flat-dts": "^2.8.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.2",
     "tailwindcss": "^3.4.13",
-    "terser-webpack-plugin": "^5.3.10",
-    "ts-loader": "^9.5.1",
     "typescript": "^4.9.5",
-    "typescript-plugin-css-modules": "^5.1.0",
-    "webpack": "^5.94.0",
-    "webpack-cli": "^5.1.4"
+    "typescript-plugin-css-modules": "^5.1.0"
   }
 }
