--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@first-apps/mf-components",
-  "version": "1.1.0",
+  "version": "1.1.2",
   "description": "Components library for @first-apps built on React JS",
   "main": "dist/cjs/index.js",
   "module": "dist/cjs/index.js",
@@ -31,6 +31,7 @@
     "eject": "react-scripts eject"
   },
   "dependencies": {
+    "@heroicons/react": "^2.1.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
