--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@first-apps/mf-components",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "Components library for @first-apps built on React JS",
   "main": "dist/cjs/index.js",
   "module": "dist/cjs/index.js",
@@ -25,7 +25,7 @@
     "start": "set PORT=8080 && react-scripts start",
     "build": "rm -rf build && react-scripts build",
     "build:lib": "rm -rf dist && rollup -c rollup.config.ts --bundleConfigAsCjs",
-    "publish": "npm publish --access public --tag latest",
+    "publish": "npm publish --access public --tag experimental",
     "link:local": "npm link",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
