--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "First Apps - Components",
+  "name": "Components library for @first-apps built on React JS",
   "icons": [
     {
       "src": "favicon.ico",
